[package]
name = "scrypto-unit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto" }
